--- a/views/base.pug
+++ b/views/base.pug
@@ -1,20 +1,21 @@
 doctype html
 html
   head
-    title My Dance Academy 
+    title Muscleblaze Gym 
     block scripts
     block style
   body
     nav#navbar.top
         ul  
             div#logo
-                img(src="/static/img/logo.png")
-                | MDA
+                img(src="/static/img/i2.jpg")
+                | MG
             li #[a(href="/") Home] 
             li #[a(href="/") About] 
             li #[a(href="/") Services] 
             li #[a(href="/") Class Info] 
-            li #[a(href="/") Contact Us]
+            li #[a(href="/contact") Contact Us]
+    .btn #[a(href="/contact") Join Now]
     block content  
     footer#footer 
-        | Copyright © 2021 marvelousdanceacademy.com | All rights reserved
+        | Copyright © 2022 muscleblazegymnasium.com | All rights reserved
