--- a/views/home.pug
+++ b/views/home.pug
@@ -11,36 +11,58 @@ block content
     
 
     section#introSection 
-        div Welcome to Marvelous Dance Academy
-        div.small Eat Stand Dance Repeat
-    
+        div Welcome to Muscleblaze Gymnasium
+        div.small where Workout is a worship
+      
     section#missionSection 
         h2  Our Mission
         div.card
-           h3 Dance Perfection 
+           h3 Weight Training 
            div.card-box
               div.card-img
-                 img(src="/static/img/1.png")
+                 img(src="/static/img/w1.png")
               div.card-content
-                 p This is the best dance academy of the universe
+                 p From bodybuilding to powerlifting and everything in between, the Fitness Factory has the equipment to help you reach your goals. With dumbells up to 150lbs, 7 squat racks, 5 deadlift platforms, 2 competition benches, and a variety of plate loaded and pin loaded machines, we have everything you need.
         div.card
-           h3 Dance the way you like 
+           h3 General Fitness
            div.card-box
               div.card-img
-                 img(src="/static/img/2.png")
+                 img(src="/static/img/w2.png")
               div.card-content
-                 p This is the best dance academy of the universe
+                 p If your goals are to improve your overall health and wellness, we have everything you need.  We have cardio equipment spanning two floors including 8 stepmills, 15+ treadmills, row machines, exercise bikes, spin bikes, ellipticals, arc trainers and even a Jacob’s Ladder. In addition to cardio equipment, we have stretching areas with mats, foam rollers, bands, light weights, and much more.
         div.card
-           h3 Expert Teaching
+           h3 Functional Training
            div.card-box
               div.card-img
-                 img(src="/static/img/3.png")
+                 img(src="/static/img/w3.png")
               div.card-content
-                 p This is the best dance academy of the universe
-    section#sponsorsSection 
-        h2  Our Sponsors 
-        div#sponsors 
-            img(src="/static/img/logo1.png",alt="Sponsor Image", class="spImage") 
-            img(src="/static/img/logo2.png",alt="Sponsor Image", class="spImage") 
-            img(src="/static/img/logo3.png",alt="Sponsor Image", class="spImage") 
-            img(src="/static/img/logo4.png",alt="Sponsor Image", class="spImage")      
+                 p With 60 feet of turf with a sled, stackable plyometric boxes, weighted medicine balls, battle ropes, squat racks, and deadlift platforms our functional training room has all the equipment you need to take your training to the next level.
+    
+    section#SupplySection 
+        h2  OUR SUPPLEMENTS
+        h3 AND SHAKE BAR
+        div.card1
+           div.card1-content
+              p Located conveniently within the Fitness Factory, stop by our shake bar for pre and post workout necessities including protein shakes made to order, protein bars and other snacks, as well as a wide array of supplements, to take home.
+              .card2 
+                 h3 The Shake Bar
+                 ul 
+                    li Protein Shakes Made to Order
+                    li Pre Workout Drinks and Powder
+                    li BCAAs and EAAs
+                    li Protein Bars and Other Snacks
+                    li Bottled Water
+                    li Energy Drinks
+                    li Ready to Drink Protein
+              .card2      
+                 h3 Retail And Merchandise
+                 ul 
+                    li Protein Tubs
+                    li Pre Workout
+                    li Intra Workout 
+                    li Custom Apparel
+                    li Shaker Bottles  
+        div.card1
+           .card1-content1
+              img(src="/static/img/supply1.jpg")
+    
