--- a/views/contact.pug
+++ b/views/contact.pug
@@ -15,6 +15,6 @@ block content
            input(type="phone", class="myInput", name="phone" placeholder="Enter your phone number")
            input(type="email", class="myInput", name="email" placeholder="Enter your email id")
            input(type="text", class="myInput", name="address" placeholder="Enter your address")
-           input(type="text", class="myInput", name="desc." placeholder="Enter your concern")
+           input(type="text", class="myInput", name="desc" placeholder="Enter your concern")
            button(class="btn")
                | Submit 
